调整配置文件，支持多个用户配置

--- a/typetool_config.json
+++ b/typetool_config.json
@@ -1,6 +1,15 @@
 {
-    "username": "",
-    "prefix": "",
-    "suffix": "",
-    "printSpeed": "30"
+    "default_config": "cfg1",
+    "cfg1": {
+        "username": "",
+        "prefix": "",
+        "suffix": "",
+        "printSpeed": "30"
+    },
+    "cfg2": {
+        "username": "",
+        "prefix": "",
+        "suffix": "",
+        "printSpeed": "30"
+    }
 }
